k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-python-app
  template:
    metadata:
      labels:
        app: k8s-python-app
    spec:
      containers:
      - name: k8s-python-app
        image: k8s-python-app:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
