k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s-python-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-python-app
            port:
              number: 8000
